# databases-labs

./: CMakeLists.txt  main.c
lib/algorithms/: sort.c  sort.h
lib/database/: database.c  database.h  database_console_interface.h
lib/database_interface/: database_console_interface.h
lib/models/: chess_club_member.c  chess_club_member.h  chess_player.c  chess_player.h
